<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              tools:context="com.capstoneproject.dof.AddNewListingActivity"
              android:gravity="top">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/activity_vertical_margin">
        <ImageView
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:scaleType="fitXY"
            android:id="@+id/item_image"
            android:src="@drawable/camera"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:weightSum="2">

            <EditText
                android:id="@+id/item_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/item_name"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLines="1"
                android:textStyle="bold"
                />

            <EditText
                android:id="@+id/item_value"
                android:layout_width="match_parent"
                android:imeOptions="actionNext"
                android:layout_height="wrap_content"
                android:hint="@string/item_value"
                android:inputType="numberDecimal"
                android:maxLines="1"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_weight="1"/>


        </LinearLayout>


    </LinearLayout>
    <EditText
        android:id="@+id/item_desc"
        android:layout_width="match_parent"
        android:imeOptions="actionDone"
        android:layout_height="wrap_content"
        android:hint="@string/item_desc"
        android:inputType="text"
        android:maxLines="1"
        android:textStyle="bold"
        android:layout_weight="1"
        android:layout_marginTop="@dimen/activity_vertical_margin"/>


    <AutoCompleteTextView
        android:id="@+id/pickup_address"
        android:layout_width="match_parent"
        android:imeOptions="actionNext"
        android:layout_height="wrap_content"
        android:hint="@string/pickup_address"
        android:inputType="none"
        android:maxLines="1"
        android:textStyle="bold"
        android:layout_weight="1"
        android:layout_marginTop="@dimen/activity_vertical_margin"/>


    <AutoCompleteTextView
        android:id="@+id/delivery_address"
        android:layout_width="match_parent"
        android:imeOptions="actionNext"
        android:layout_height="wrap_content"
        android:hint="@string/delivery_address"
        android:inputType="textPostalAddress"
        android:maxLines="1"
        android:textStyle="bold"
        android:layout_weight="1"
        android:layout_marginTop="@dimen/activity_vertical_margin"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_weight="1"
        android:layout_marginTop="@dimen/med_margin">


        <EditText
            android:id="@+id/date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/date"
            android:maxLines="1"
            android:inputType="none"
            android:textStyle="bold"
            android:layout_weight="1"
            android:paddingBottom="@dimen/padding"
            android:textIsSelectable="true"
            android:layout_marginTop="@dimen/med_margin"
            android:layout_marginRight="@dimen/margin"
            />

        <EditText
            android:id="@+id/time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/time"
            android:inputType="none"
            android:maxLines="1"
            android:paddingBottom="@dimen/padding"
            android:textStyle="bold"
            android:textIsSelectable="true"
            android:layout_marginTop="@dimen/med_margin"
            android:layout_marginLeft="@dimen/margin"
            />


    </LinearLayout>


    <Button
        android:id="@+id/add_new_listing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?android:textAppearanceMedium"
        android:onClick="addNewListing"
        android:background="@color/colorPrimary"
        android:textColor="@color/white"
        android:text="@string/action_add_new_listing"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/large_margin"

        />


</LinearLayout>