<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:card_view="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginRight="@dimen/margin"
        android:layout_marginTop="@dimen/margin"
        android:layout_marginBottom="@dimen/large_margin">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:layout_marginTop="@dimen/med_margin"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            android:text="@string/support1"
            android:layout_gravity="center_vertical"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:layout_marginTop="@dimen/med_margin"
            android:textStyle="bold"
            android:textColor="@color/cyan"
            android:text="@string/support2"
            android:gravity="center"
           />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:layout_marginTop="@dimen/med_margin"
            android:textStyle="bold|italic"
            android:textColor="@color/colorAccent"
            android:text="@string/support3"
            />


    </LinearLayout>

</LinearLayout>