<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              xmlns:card_view="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              tools:context="com.capstoneproject.dof.ChangePasswordActivity"
              android:gravity="center_vertical">
    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_margin="2dp"
        card_view:cardCornerRadius="4dp"
        card_view:contentPadding="5dp"
        card_view:cardElevation="10dp"
        card_view:cardPreventCornerOverlap="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/large_margin">
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/old_password"
                    android:layout_width="match_parent"
                    android:imeOptions="actionNext"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_old_password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textStyle="bold"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/large_margin">

                <EditText
                    android:id="@+id/new_password"
                    android:layout_width="match_parent"
                    android:imeOptions="actionNext"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_new_password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textStyle="bold"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/large_margin"
                >

                <EditText
                    android:id="@+id/confirm_new_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_confirm_new_password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textStyle="bold"/>

            </android.support.design.widget.TextInputLayout>


            <Button
                android:id="@+id/action_change_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="?android:textAppearanceMedium"

                android:background="@color/colorPrimary"
                android:textColor="@color/white"
                android:text="@string/action_change_password"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/ex_large_margin"
                />


        </LinearLayout>
    </android.support.v7.widget.CardView>


</LinearLayout>
